# Doodle-Jump

./: CMakeLists.txt  Doodle_Jump.cpp  README.md
include/: SceneManager.h  Utils.h  enemy.h  game.h  player.h
src/: SceneManager.cpp  Utils.cpp  enemy.cpp  game.cpp  main.cpp  player.cpp
